--- a/src/assets/layout/styles/layout/sidebar/themes/_menu_teal.scss
+++ b/src/assets/layout/styles/layout/sidebar/themes/_menu_teal.scss
@@ -1,7 +1,7 @@
 .layout-menu-teal {
     --menu-bg: #20c997;
     --root-menuitem-text-color: #ffffff;
-    --menuitem-text-color: rgba(255,255,255,.6);
+    --menuitem-text-color: rgba(255,255,255,.9);
     --menuitem-hover-bg: rgba(255,255,255,.12);
     --active-menuitem-text-color: #ffffff;
     --active-menuitem-bg: rgba(255,255,255,.24);
